# AMZNOptim_MAT381

./: .gitignore  LICENSE  README.md  pyproject.toml  simulator.py
.github/workflows/: super-linter.yml
data/address/: readme.txt
data/standard_box/: boxsize.tsv
data/vehicle/: readme.txt
data/warehouse/: warehouse.tsv
demo/: FreshOrderDeliveryPlanner.ipynb  PrimeNowOrderDeliveryPlanner.ipynb  RegularOrderDeliveryPlanner.ipynb
demo/config/: boxsize.tsv
demo/input_data/: depot.json
demo/input_data/prime_now/: gmap_matrix.json
demo/input_data/regular/: gmap_validation.json
example/: FreshOrderDeliveryPlanner.ipynb  PrimeNowOrderDeliveryPlanner.ipynb  RegularOrderDeliveryPlanner.ipynb  single_depot_example.ipynb
example/formatted_data/: depot.json  fresh_gmap_matrix.json  fresh_gmap_validation.json  fresh_orders.csv  gmap_matrix.json  orders.csv  prime_now_orders.csv  primenow_gmap_validation.json  regular_gmap_matrix.json  vehicle.json
sample_data/address/: filtering.ipynb  greater_seattle.geojson  king_county.geojson
sample_data/standard_box/: readme.txt
sample_data/vehicle/: delivery_vehicle_info.tsv
sample_data/warehouse/: readme.txt
solver/: CpSAT.py
src/amznoptim/: __init__.py
src/amznoptim/solver/: CpSAT.py  GurobiMIP.py  base.py
src/amznoptim/utils/: gmaps_service.py  preprocess.py
utils/: gcloud_services.py  gmaps_service.py  preprocess.py  simulator.py
