[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amznoptim"
version = "0.1.250601-beta"
description = "Amazon Local Delivery Optimization with Constraint Programming"
readme = "README.md"
authors = [
    {name = "Kristin Ding", email = "haozhd2@uw.edu"},
    {name = "Tianshuo Wang", email = "twang38@uw.edu"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ortools>=9.12.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "ipykernel>=6.29.0",
    "gurobipy>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "scikit-optimize>=0.9.0"
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88